# astron

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  pages.yml  release.yml
apps/cli/: package.json
apps/cli/src/: index.ts  report.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/scripts/: sync-wasm.mjs
apps/web/src/: App.tsx  index.css  vite-env.d.ts
apps/web/src/components/: ChartView.tsx  LibraryTab.tsx  PersonForm.tsx  glyphs.ts
apps/web/src/lib/: astro.ts  compute.ts  overrides-store.ts  people.ts
docs/: PLAN.md
landing/: index.html  package.json  vite.config.ts
landing/src/: downloads.js  style.css
