[package]
name = "astron-desktop"
version = "0.1.3"
description = "ASTRON — The Clockwork of the Heavens, Charted."
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "astron_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde_json = "1"
